# widgets

./: Cargo.toml  default.nix  flake.nix  shell.nix
bar/: Cargo.toml
bar/src/: battery.rs  bluetooth.rs  feed.rs  main.rs  menu.rs  network.rs  power.rs  time.rs
bar/src/hyprland/: mod.rs
bar/src/menu/: mod.rs  power.rs
bar/src/menu/feed/: mod.rs
bar/src/views/: mod.rs  tooltip.rs
launcher/: Cargo.toml
launcher/src/: main.rs
notifier/: Cargo.toml
notifier/src/: bus.rs  dbus.rs  main.rs
theme/: Cargo.toml
theme/src/: lib.rs
volume-popup/: Cargo.toml
volume-popup/src/: main.rs
