[package]
name = "bar"
version = "0.1.0"
edition = "2024"

[dependencies]
ori-native = { workspace = true }
theme      = { workspace = true }

gdk4 = "0.11"
chrono = "0.4"
battery = "0.7"
reqwest = "0.13"
eyre = "0.6"
toml = "1"

[dependencies.rss]
version = "2"
features = ["atom"]

[dependencies.atom_syndication]
version = "0.12"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hyprland]
version = "0.4.0-beta.3"
default-features = false
features = ["data", "listener", "dispatch"]
